# SapiSales

./: CMakeLists.txt  README.md
sapi_sales/headers/manager/: lab2.h  lab3.h  lab5.h  lab_manager.h  user_array.h
sapi_sales/headers/models/: product.h  user.h
sapi_sales/headers/stack/: product_stack.h
sapi_sales/src/: main.c
sapi_sales/src/manager/: lab2.c  lab3.c  lab5.c  lab_manager.c  user_array.c
sapi_sales/src/models/: product.c  user.c
sapi_sales/src/stack/: product_stack.c
shared/headers/: errors.h  messages.h  useful.h
shared/src/: errors.c  messages.c
